create img directory and add recipes images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/chicken-parmesan.html">Chicken Parmesan</a>
+        <a href="./recipes/chicken-parmesan.html">Chicken Parmesan Recipe</a>
     </body>
 </html>
