add the href image source

--- a/recipes/chicken-parmesan.html
+++ b/recipes/chicken-parmesan.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h1>Chicken Parmesan That's Never Soggy</h1>
-        <img src="" alt="">
+        <img src="../img/chicken-parmesan.jpg" alt="Chicken Parmesan" />
     </body>
 </html>
