Add Description, Headings, Paragraphs

--- a/recipes/chicken-parmesan.html
+++ b/recipes/chicken-parmesan.html
@@ -7,7 +7,27 @@
         <title>Chicken Parmesan Recipe</title>
     </head>
     <body>
-        <h1>Chicken Parmesan That's Never Soggy</h1>
-        <img src="../img/chicken-parmesan.jpg" alt="Chicken Parmesan" />
+        <a href="../index.html">Back</a>
+        <h1>Chicken Parmesan !!!</h1>
+        <p>
+            Today we want to teach you an classic recipe that everybody need to
+            learn how to, because it's a great option for lunch or dinner for
+            these days you want to knock yourself out!
+            <em>(JK It's easy to make lol)</em> and economize your time.
+        </p>
+
+        <p>
+            <strong>Chicken Parmesan</strong> is no doubt the most popular
+            non-pasta dish in Italian-American style restaurants. And while this
+            delicious meal may seem fancy, it's actually pretty easy to make at
+            home.
+        </p>
+        <h3>How to make a delicious Chicken Parmesan That's Never Soggy</h3>
+        <img
+            src="../img/chicken-parmesan.jpg"
+            alt="Chicken Parmesan"
+            height="480"
+            width="640"
+        />
     </body>
 </html>
