Create Ordered list

--- a/recipes/chicken-parmesan.html
+++ b/recipes/chicken-parmesan.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <a href="../index.html">Back</a>
+    <div>
         <h1>Chicken Parmesan !!!</h1>
         <p>
             Today we want to teach you an classic recipe that everybody need to
@@ -28,6 +29,82 @@
             alt="Chicken Parmesan"
             height="480"
             width="640"
+            style="border: 2px solid black"
         />
+
+        </p>
+        <figcaption>Fig.1 - all recipes source</figcaption>
+        <hr />
+
+        <h1>Top Tips for Making Chicken Parmesan</h1>
+        <p>
+            Before we get to the recipe, here's your cheat sheet for making the
+            best baked Chicken Parmesan:
+        </p>
+        <ol>
+            <strong><li>Pound Chicken to an even thickness</li></strong>
+            <p>
+                Pound the boneless chicken breasts out to an even width so they
+                cook evenly. Basically, you're pounding the thick part down to
+                the size of the thin part, about a half-inch thick.
+            </p>
+            <strong><li>Don't skimp on seasoning</li></strong>
+            <p>
+                Salt and pepper the chicken well. Then don't bother with salting
+                the flour and bread crumbs.
+            </p>
+            <strong><li>Add Parmesan to the bread crumbs</li></strong>
+            <p>
+                Use Panko bread crumbs mixed with a little finely grated
+                Parmesan cheese. When you fry the breaded chicken, the Parmesan
+                will give it an extra crunch and exciting flavor.
+            </p>
+            <strong><li>Rest before cooking</li></strong>
+            <p>
+                Before frying, let the Breaded chicken sit on the counter for
+                about 15 minutes to allow the coating to adhere to the chicken
+                breast.
+            </p>
+            <strong><li>Go easy on the sauce</li></strong>
+            <p>
+                THE KEY: Don't drown the poor breaded and fried chicken in sauce
+                and smother it in cheese. Too much of a good thing is too much.
+                You did all the work creating a crisp coating, why make it soggy
+                with too much sauce and cheese?
+            </p>
+            <strong><li>Make sure your oven is hot, hot, hot</li></strong>
+            <p>
+                Be sure your oven is <em>completely</em> preheated to 450 F.
+                You'll want the cheese brown slightly and the breading to crisp
+                up before the chicken gets overcooked, and a nice hot oven is
+                the way to go.
+            </p>
+            <p>
+                Now find out <u>the best wine to pair</u> with your non-soggy,
+                not-too-saucy baked Chicken Parmesan. Enjoy!
+            </p>
+        </ol>
+        <hr />
+        &#160;
+        <hr />
+    </div>
+        <div>
+            <h2>Ingredients</h2>
+
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
     </body>
 </html>
