--- a/recipes/chicken-parmesan.html
+++ b/recipes/chicken-parmesan.html
@@ -91,19 +91,23 @@
         <div>
             <h2>Ingredients</h2>
 
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+            <ul style="list-style-type: none;">
+                <td>
+                
+                    <li><input type="checkbox" name="name1" />&nbsp; 4 skinless, boneless chicken breast halves</li>
+                    <li><input type="checkbox" name="name1" />&nbsp; salt and freshly ground black pepper to taste</li>
+                    <li><input type="checkbox" name="name1" />&nbsp; 2 large eggs</li>
+                    <li><input type="checkbox" name="name1" />&nbsp; 1 cup panko bread crumbs, or more as needed</li>
+                    <li><input type="checkbox" name="name1" />&nbsp; ¾ cup grated Parmesan cheese, divided</li>
+                    <li><input type="checkbox" name="name1" />&nbsp; 2 tablespoons all-purpose flour, or more if needed</li>
+                    <li><input type="checkbox" name="name1" />&nbsp; ½ cup olive oil for frying, or as needed</li>
+                    <li><input type="checkbox" name="name1" />&nbsp; ½ cup prepared tomato sauce</li>
+                    <li><input type="checkbox" name="name1" />&nbsp; ¼ cup fresh mozzarella, cut into small cubes</li>
+                    <li><input type="checkbox" name="name1" />&nbsp; ¼ cup chopped fresh basil</li>
+                    <li><input type="checkbox" name="name1" />&nbsp; ½ cup grated provolone cheese</li>
+                    <li><input type="checkbox" name="name1" />&nbsp; 2 teaspoons olive oil</li>
+                    
+                </td>
             </ul>
         </div>
     </body>
