--- a/recipes/chicken-parmesan.html
+++ b/recipes/chicken-parmesan.html
@@ -8,107 +8,214 @@
     </head>
     <body>
         <a href="../index.html">Back</a>
-    <div>
-        <h1>Chicken Parmesan !!!</h1>
-        <p>
-            Today we want to teach you an classic recipe that everybody need to
-            learn how to, because it's a great option for lunch or dinner for
-            these days you want to knock yourself out!
-            <em>(JK It's easy to make lol)</em> and economize your time.
-        </p>
+        <div>
+            <h1>Chicken Parmesan !!!</h1>
+            <p>
+                Today we want to teach you an classic recipe that everybody need
+                to learn how to, because it's a great option for lunch or dinner
+                for these days you want to knock yourself out!
+                <em>(JK It's easy to make lol)</em> and economize your time.
+            </p>
 
-        <p>
-            <strong>Chicken Parmesan</strong> is no doubt the most popular
-            non-pasta dish in Italian-American style restaurants. And while this
-            delicious meal may seem fancy, it's actually pretty easy to make at
-            home.
-        </p>
-        <h3>How to make a delicious Chicken Parmesan That's Never Soggy</h3>
-        <img
-            src="../img/chicken-parmesan.jpg"
-            alt="Chicken Parmesan"
-            height="480"
-            width="640"
-            style="border: 2px solid black"
-        />
+            <p>
+                <strong>Chicken Parmesan</strong> is no doubt the most popular
+                non-pasta dish in Italian-American style restaurants. And while
+                this delicious meal may seem fancy, it's actually pretty easy to
+                make at home.
+            </p>
+            <h3>How to make a delicious Chicken Parmesan That's Never Soggy</h3>
+            <img
+                src="../img/chicken-parmesan.jpg"
+                alt="Chicken Parmesan"
+                height="480"
+                width="640"
+                style="border: 2px solid black"
+            />
+            <figcaption>Fig.1 - all recipes source</figcaption>
+            <hr />
 
-        </p>
-        <figcaption>Fig.1 - all recipes source</figcaption>
-        <hr />
-
-        <h1>Top Tips for Making Chicken Parmesan</h1>
-        <p>
-            Before we get to the recipe, here's your cheat sheet for making the
-            best baked Chicken Parmesan:
-        </p>
-        <ol>
-            <strong><li>Pound Chicken to an even thickness</li></strong>
+            <h1>Top Tips for Making Chicken Parmesan</h1>
             <p>
-                Pound the boneless chicken breasts out to an even width so they
-                cook evenly. Basically, you're pounding the thick part down to
-                the size of the thin part, about a half-inch thick.
+                Before we get to the recipe, here's your cheat sheet for making
+                the best baked Chicken Parmesan:
             </p>
-            <strong><li>Don't skimp on seasoning</li></strong>
-            <p>
-                Salt and pepper the chicken well. Then don't bother with salting
-                the flour and bread crumbs.
-            </p>
-            <strong><li>Add Parmesan to the bread crumbs</li></strong>
-            <p>
-                Use Panko bread crumbs mixed with a little finely grated
-                Parmesan cheese. When you fry the breaded chicken, the Parmesan
-                will give it an extra crunch and exciting flavor.
-            </p>
-            <strong><li>Rest before cooking</li></strong>
-            <p>
-                Before frying, let the Breaded chicken sit on the counter for
-                about 15 minutes to allow the coating to adhere to the chicken
-                breast.
-            </p>
-            <strong><li>Go easy on the sauce</li></strong>
-            <p>
-                THE KEY: Don't drown the poor breaded and fried chicken in sauce
-                and smother it in cheese. Too much of a good thing is too much.
-                You did all the work creating a crisp coating, why make it soggy
-                with too much sauce and cheese?
-            </p>
-            <strong><li>Make sure your oven is hot, hot, hot</li></strong>
-            <p>
-                Be sure your oven is <em>completely</em> preheated to 450 F.
-                You'll want the cheese brown slightly and the breading to crisp
-                up before the chicken gets overcooked, and a nice hot oven is
-                the way to go.
-            </p>
-            <p>
-                Now find out <u>the best wine to pair</u> with your non-soggy,
-                not-too-saucy baked Chicken Parmesan. Enjoy!
-            </p>
-        </ol>
-        <hr />
-        &#160;
-        <hr />
-    </div>
+            <ol>
+                <strong><li>Pound Chicken to an even thickness</li></strong>
+                <p>
+                    Pound the boneless chicken breasts out to an even width so
+                    they cook evenly. Basically, you're pounding the thick part
+                    down to the size of the thin part, about a half-inch thick.
+                </p>
+                <strong><li>Don't skimp on seasoning</li></strong>
+                <p>
+                    Salt and pepper the chicken well. Then don't bother with
+                    salting the flour and bread crumbs.
+                </p>
+                <strong><li>Add Parmesan to the bread crumbs</li></strong>
+                <p>
+                    Use Panko bread crumbs mixed with a little finely grated
+                    Parmesan cheese. When you fry the breaded chicken, the
+                    Parmesan will give it an extra crunch and exciting flavor.
+                </p>
+                <strong><li>Rest before cooking</li></strong>
+                <p>
+                    Before frying, let the Breaded chicken sit on the counter
+                    for about 15 minutes to allow the coating to adhere to the
+                    chicken breast.
+                </p>
+                <strong><li>Go easy on the sauce</li></strong>
+                <p>
+                    THE KEY: Don't drown the poor breaded and fried chicken in
+                    sauce and smother it in cheese. Too much of a good thing is
+                    too much. You did all the work creating a crisp coating, why
+                    make it soggy with too much sauce and cheese?
+                </p>
+                <strong><li>Make sure your oven is hot, hot, hot</li></strong>
+                <p>
+                    Be sure your oven is <em>completely</em> preheated to 450 F.
+                    You'll want the cheese brown slightly and the breading to
+                    crisp up before the chicken gets overcooked, and a nice hot
+                    oven is the way to go.
+                </p>
+                <p>
+                    Now find out <u>the best wine to pair</u> with your
+                    non-soggy, not-too-saucy baked Chicken Parmesan. Enjoy!
+                </p>
+            </ol>
+            <hr />
+            &#160;
+            <hr />
+        </div>
         <div>
             <h2>Ingredients</h2>
 
-            <ul style="list-style-type: none;">
+            <ul style="list-style-type: none">
                 <td>
-                
-                    <li><input type="checkbox" name="name1" />&nbsp; 4 skinless, boneless chicken breast halves</li>
-                    <li><input type="checkbox" name="name1" />&nbsp; salt and freshly ground black pepper to taste</li>
-                    <li><input type="checkbox" name="name1" />&nbsp; 2 large eggs</li>
-                    <li><input type="checkbox" name="name1" />&nbsp; 1 cup panko bread crumbs, or more as needed</li>
-                    <li><input type="checkbox" name="name1" />&nbsp; ¾ cup grated Parmesan cheese, divided</li>
-                    <li><input type="checkbox" name="name1" />&nbsp; 2 tablespoons all-purpose flour, or more if needed</li>
-                    <li><input type="checkbox" name="name1" />&nbsp; ½ cup olive oil for frying, or as needed</li>
-                    <li><input type="checkbox" name="name1" />&nbsp; ½ cup prepared tomato sauce</li>
-                    <li><input type="checkbox" name="name1" />&nbsp; ¼ cup fresh mozzarella, cut into small cubes</li>
-                    <li><input type="checkbox" name="name1" />&nbsp; ¼ cup chopped fresh basil</li>
-                    <li><input type="checkbox" name="name1" />&nbsp; ½ cup grated provolone cheese</li>
-                    <li><input type="checkbox" name="name1" />&nbsp; 2 teaspoons olive oil</li>
-                    
+                    <li>
+                        <input type="checkbox" name="name1" />&nbsp; 4 skinless,
+                        boneless chicken breast halves
+                    </li>
+                    <li>
+                        <input type="checkbox" name="name1" />&nbsp; salt and
+                        freshly ground black pepper to taste
+                    </li>
+                    <li>
+                        <input type="checkbox" name="name1" />&nbsp; 2 large
+                        eggs
+                    </li>
+                    <li>
+                        <input type="checkbox" name="name1" />&nbsp; 1 cup Panko
+                        bread crumbs, or more as needed
+                    </li>
+                    <li>
+                        <input type="checkbox" name="name1" />&nbsp; ¾ cup
+                        grated Parmesan cheese, divided
+                    </li>
+                    <li>
+                        <input type="checkbox" name="name1" />&nbsp; 2
+                        tablespoons all-purpose flour, or more if needed
+                    </li>
+                    <li>
+                        <input type="checkbox" name="name1" />&nbsp; ½ cup olive
+                        oil for frying, or as needed
+                    </li>
+                    <li>
+                        <input type="checkbox" name="name1" />&nbsp; ½ cup
+                        prepared tomato sauce
+                    </li>
+                    <li>
+                        <input type="checkbox" name="name1" />&nbsp; ¼ cup fresh
+                        mozzarella, cut into small cubes
+                    </li>
+                    <li>
+                        <input type="checkbox" name="name1" />&nbsp; ¼ cup
+                        chopped fresh basil
+                    </li>
+                    <li>
+                        <input type="checkbox" name="name1" />&nbsp; ½ cup
+                        grated provolone cheese
+                    </li>
+                    <li>
+                        <input type="checkbox" name="name1" />&nbsp; 2 teaspoons
+                        olive oil
+                    </li>
                 </td>
             </ul>
         </div>
+        <hr />
+        &#160;
+        <hr />
+        <h2>Steps Directions</h2>
+        <ol style="list-style-type: none">
+            <strong>
+                <li>Step 1</li>
+            </strong>
+            <p>Preheat an oven to 450 degrees F (230 degrees C).</p>
+            <strong>
+                <li>Step 2</li>
+            </strong>
+            <p>
+                Place chicken breasts between two sheets of heavy plastic
+                (resealable freezer bags work well) on a solid, level surface.
+                Firmly pound chicken with the smooth side of a meat mallet to a
+                thickness of 1/2-inch. Season chicken thoroughly with salt and
+                pepper.
+            </p>
+            <strong>
+                <li>Step 3</li>
+            </strong>
+            <p>Beat eggs in a shallow bowl and set aside.</p>
+            <strong>
+                <li>Step 4</li>
+            </strong>
+            <p>
+                Mix bread crumbs and 1/2 cup Parmesan cheese in a separate bowl,
+                set aside.
+            </p>
+            <strong>
+                <li>Step 5</li>
+            </strong>
+            <p>
+                Place flour in a sifter or strainer; sprinkle over chicken
+                breasts, evenly coating both sides.
+            </p>
+            <strong>
+                <li>Step 6</li>
+            </strong>
+            <p>
+                Dip a flour-coated chicken breast in beaten eggs. Transfer
+                breast to the bread crumb mixture, pressing crumbs into both
+                sides. Repeat for each breast. Let chicken rest for 10 to 15
+                minutes.
+            </p>
+            <strong>
+                <li>Step 7</li>
+            </strong>
+            <p>
+                Heat 1/2 inch olive oil in a large skillet on medium-high heat
+                until it begins to shimmer. Cook chicken in the hot oil until
+                golden, about 2 minutes per side. The chicken will finish
+                cooking in the oven.
+            </p>
+            <strong>
+                <li>Step 8</li>
+            </strong>
+            <p>
+                Transfer chicken to a baking dish. Top each breast with 2
+                tablespoons tomato sauce. Layer each chicken breast with equal
+                amounts of mozzarella cheese, fresh basil, and provolone cheese.
+                Sprinkle remaining Parmesan over top and drizzle each with 1/2
+                teaspoon olive oil.
+            </p>
+            <strong>
+                <li>Step 9</li>
+            </strong>
+            <p>
+                Bake in the preheated oven until cheese is browned and bubbly
+                and chicken breasts are no longer pink in the center, 15 to 20
+                minutes. An instant-read thermometer inserted into the center
+                should read at least 165 degrees F (74 degrees C).
+            </p>
+        </ol>
     </body>
 </html>
