add link to chicken marsala

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <>
             <a href="./recipes/chicken-parmesan.html"
                 >Chicken Parmesan Recipe</a
             >
             <a href="./recipes/kung-pao-chicken.html">Kung Pao Chicken</a>
+            <a href="./recipes/kung-pao-chicken.html">Chicken-Marsala</a>
         </ul>
-        <!-- <a href="./recipes/kung-pao-chicken.html">Chicken Parmesan Recipe</a>        </ul> -->
     </body>
 </html>
