clean the code pls

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <>
-            <a href="./recipes/chicken-parmesan.html"
-                >Chicken Parmesan Recipe</a
-            >
+            <a href="./recipes/chicken-parmesan.html">Chicken Parmesan Recipe</a>
             <a href="./recipes/kung-pao-chicken.html">Kung Pao Chicken</a>
             <a href="./recipes/chicken-marsala.html">Chicken-Marsala</a>
         </ul>
