--- a/recipes/kung-pao-chicken.html
+++ b/recipes/kung-pao-chicken.html
@@ -19,7 +19,7 @@
             </p>
             <img
                 src="../img/kung-pao-chicken.jpg"
-                alt="Chicken Parmesan"
+                alt="kung pao chicken"
                 height="480"
                 width="640"
                 style="border: 2px solid black"
