change img to image and add href link css style to index

--- a/recipes/chicken-parmesan.html
+++ b/recipes/chicken-parmesan.html
@@ -25,7 +25,7 @@
             </p>
             <h3>How to make a delicious Chicken Parmesan That's Never Soggy</h3>
             <img
-                src="../img/chicken-parmesan.jpg"
+                src="../image/chicken-parmesan.jpg"
                 alt="Chicken Parmesan"
                 height="480"
                 width="640"
