--- a/recipes/kung-pao-chicken.html
+++ b/recipes/kung-pao-chicken.html
@@ -18,7 +18,7 @@
                 shoots for the water chestnuts. You can't go wrong! Enjoy!
             </p>
             <img
-                src="../img/kung-pao-chicken.jpg"
+                src="../image/kung-pao-chicken.jpg"
                 alt="kung pao chicken"
                 height="480"
                 width="640"
