--- a/recipes/chicken-marsala.html
+++ b/recipes/chicken-marsala.html
@@ -25,7 +25,7 @@
                 best Chicken Marsala right here.
             </p>
             <img
-                src="../img/chicken-marsala.jpg"
+                src="../image/chicken-marsala.jpg"
                 alt="Chicken marsala"
                 height="480"
                 width="640"
