add npm animation css and add some style css and add some classes on index

--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
         <title id="title">Delicious Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-            <a href="./recipes/chicken-parmesan.html">Chicken Parmesan Recipe</a>
-            <a href="./recipes/kung-pao-chicken.html">Kung Pao Chicken</a>
-            <a href="./recipes/chicken-marsala.html">Chicken-Marsala</a>
+        <div class="main">
+            <h1>Odin Recipes</h1>
         </ul>
+    </div>
+    
+<div class="wrap">
+    <span class="decor">
+    </span>
+        <nav>
+            <ul class="primary">
+                <li>
+                    <a href="">Recipes</a>
+                    <ul class="sub">
+                        <li><a href="./recipes/chicken-parmesan.html">Chicken Parmesan Recipe</a></li>
+                        <li><a href="./recipes/kung-pao-chicken.html">Kung Pao Chicken</a></li>
+                        <li><a href="./recipes/chicken-marsala.html">Chicken-Marsala</a></li>
+                    </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </body>
 </html>
