--- a/recipes/chicken-parmesan.html
+++ b/recipes/chicken-parmesan.html
@@ -4,13 +4,15 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Chicken Parmesan Recipe</title>
-        <link rel="stylesheet" href="stylerecipe.css">
+        <title class="title">Chicken Parmesan Recipe</title>
+        <link rel="stylesheet" href="stylerecipe.css" />
     </head>
     <body>
-        <a href="../index.html">Back</a>
-        <div>
-            <h1>Chicken Parmesan !!!</h1>
+        <div class="navigation">
+            <a href="../index.html">Back Home</a>
+        </div>
+        <h1 class="hoverme">Chicken Parmesan !!!</h1>
+        <div class="paragraph">
             <p>
                 Today we want to teach you an classic recipe that everybody need
                 to learn how to, because it's a great option for lunch or dinner
@@ -24,6 +26,8 @@
                 this delicious meal may seem fancy, it's actually pretty easy to
                 make at home.
             </p>
+        </div>
+        <div class="chickenimg">
             <h3>How to make a delicious Chicken Parmesan That's Never Soggy</h3>
             <img
                 src="../image/chicken-parmesan.jpg"
@@ -34,7 +38,8 @@
             />
             <figcaption>Fig.1 - all recipes source</figcaption>
             <hr />
-
+        </div>
+        <div class="paragraph2">
             <h1>Top Tips for Making Chicken Parmesan</h1>
             <p>
                 Before we get to the recipe, here's your cheat sheet for making
@@ -87,7 +92,7 @@
             &#160;
             <hr />
         </div>
-        <div>
+        <div class="paragraph3">
             <h2>Ingredients</h2>
 
             <ul style="list-style-type: none">
@@ -146,77 +151,80 @@
         <hr />
         &#160;
         <hr />
-        <h2>Steps Directions</h2>
-        <ol style="list-style-type: none">
-            <strong>
-                <li>Step 1</li>
-            </strong>
-            <p>Preheat an oven to 450 degrees F (230 degrees C).</p>
-            <strong>
-                <li>Step 2</li>
-            </strong>
-            <p>
-                Place chicken breasts between two sheets of heavy plastic
-                (resealable freezer bags work well) on a solid, level surface.
-                Firmly pound chicken with the smooth side of a meat mallet to a
-                thickness of 1/2-inch. Season chicken thoroughly with salt and
-                pepper.
-            </p>
-            <strong>
-                <li>Step 3</li>
-            </strong>
-            <p>Beat eggs in a shallow bowl and set aside.</p>
-            <strong>
-                <li>Step 4</li>
-            </strong>
-            <p>
-                Mix bread crumbs and 1/2 cup Parmesan cheese in a separate bowl,
-                set aside.
-            </p>
-            <strong>
-                <li>Step 5</li>
-            </strong>
-            <p>
-                Place flour in a sifter or strainer; sprinkle over chicken
-                breasts, evenly coating both sides.
-            </p>
-            <strong>
-                <li>Step 6</li>
-            </strong>
-            <p>
-                Dip a flour-coated chicken breast in beaten eggs. Transfer
-                breast to the bread crumb mixture, pressing crumbs into both
-                sides. Repeat for each breast. Let chicken rest for 10 to 15
-                minutes.
-            </p>
-            <strong>
-                <li>Step 7</li>
-            </strong>
-            <p>
-                Heat 1/2 inch olive oil in a large skillet on medium-high heat
-                until it begins to shimmer. Cook chicken in the hot oil until
-                golden, about 2 minutes per side. The chicken will finish
-                cooking in the oven.
-            </p>
-            <strong>
-                <li>Step 8</li>
-            </strong>
-            <p>
-                Transfer chicken to a baking dish. Top each breast with 2
-                tablespoons tomato sauce. Layer each chicken breast with equal
-                amounts of mozzarella cheese, fresh basil, and provolone cheese.
-                Sprinkle remaining Parmesan over top and drizzle each with 1/2
-                teaspoon olive oil.
-            </p>
-            <strong>
-                <li>Step 9</li>
-            </strong>
-            <p>
-                Bake in the preheated oven until cheese is browned and bubbly
-                and chicken breasts are no longer pink in the center, 15 to 20
-                minutes. An instant-read thermometer inserted into the center
-                should read at least 165 degrees F (74 degrees C).
-            </p>
-        </ol>
+        <div class="paragraph4">
+            <h2>Steps Directions</h2>
+            <ol style="list-style-type: none">
+                <strong>
+                    <li>Step 1</li>
+                </strong>
+                <p>Preheat an oven to 450 degrees F (230 degrees C).</p>
+                <strong>
+                    <li>Step 2</li>
+                </strong>
+                <p>
+                    Place chicken breasts between two sheets of heavy plastic
+                    (resealable freezer bags work well) on a solid, level
+                    surface. Firmly pound chicken with the smooth side of a meat
+                    mallet to a thickness of 1/2-inch. Season chicken thoroughly
+                    with salt and pepper.
+                </p>
+                <strong>
+                    <li>Step 3</li>
+                </strong>
+                <p>Beat eggs in a shallow bowl and set aside.</p>
+                <strong>
+                    <li>Step 4</li>
+                </strong>
+                <p>
+                    Mix bread crumbs and 1/2 cup Parmesan cheese in a separate
+                    bowl, set aside.
+                </p>
+                <strong>
+                    <li>Step 5</li>
+                </strong>
+                <p>
+                    Place flour in a sifter or strainer; sprinkle over chicken
+                    breasts, evenly coating both sides.
+                </p>
+                <strong>
+                    <li>Step 6</li>
+                </strong>
+                <p>
+                    Dip a flour-coated chicken breast in beaten eggs. Transfer
+                    breast to the bread crumb mixture, pressing crumbs into both
+                    sides. Repeat for each breast. Let chicken rest for 10 to 15
+                    minutes.
+                </p>
+                <strong>
+                    <li>Step 7</li>
+                </strong>
+                <p>
+                    Heat 1/2 inch olive oil in a large skillet on medium-high
+                    heat until it begins to shimmer. Cook chicken in the hot oil
+                    until golden, about 2 minutes per side. The chicken will
+                    finish cooking in the oven.
+                </p>
+                <strong>
+                    <li>Step 8</li>
+                </strong>
+                <p>
+                    Transfer chicken to a baking dish. Top each breast with 2
+                    tablespoons tomato sauce. Layer each chicken breast with
+                    equal amounts of mozzarella cheese, fresh basil, and
+                    provolone cheese. Sprinkle remaining Parmesan over top and
+                    drizzle each with 1/2 teaspoon olive oil.
+                </p>
+                <strong>
+                    <li>Step 9</li>
+                </strong>
+                <p>
+                    Bake in the preheated oven until cheese is browned and
+                    bubbly and chicken breasts are no longer pink in the center,
+                    15 to 20 minutes. An instant-read thermometer inserted into
+                    the center should read at least 165 degrees F (74 degrees
+                    C).
+                </p>
+            </ol>
+        </div>
     </body>
 </html>
