--- a/recipes/chicken-parmesan.html
+++ b/recipes/chicken-parmesan.html
@@ -6,20 +6,23 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title class="title">Chicken Parmesan Recipe</title>
         <link rel="stylesheet" href="stylerecipe.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
     </head>
     <body>
         <div class="navigation">
             <a href="../index.html">Back Home</a>
         </div>
-        <h1 class="hoverme">Chicken Parmesan !!!</h1>
+        <h1 class="title">Chicken Parmesan !!!</h1>
         <div class="paragraph">
-            <p>
+            <p class="paragraph2">
                 Today we want to teach you an classic recipe that everybody need
                 to learn how to, because it's a great option for lunch or dinner
                 for these days you want to knock yourself out!
                 <em>(JK It's easy to make lol)</em> and economize your time.
             </p>
-
             <p>
                 <strong>Chicken Parmesan</strong> is no doubt the most popular
                 non-pasta dish in Italian-American style restaurants. And while
